[package]
name = "pallet-dotmog"
version = "3.0.0"
authors = ["DOT Mog Team <adming@dotmog.com>"]
edition = "2018"
license = "AGPL3.0"
homepage = "https://www.dotmog.com"
repository = "https://github.com/dotmog/substrate/"
description = "FRAME pallet dmog for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { version = "3.0.0", default-features = false, path = "../support" }
frame-system = { version = "3.0.0", default-features = false, path = "../system" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
sp-io = { version = "3.0.0", path = "../../primitives/io" }
sp-core = { version = "3.0.0", path = "../../primitives/core" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-core/std',
]
runtime-benchmarks = []